SQL migrations refactored
